<resources>
    <string name="app_name">Fruit Store Inc</string>

    <!-- Fragment titles -->
    <string name="log_in_title">Log In</string>
    <string name="welcome_title">Welcome</string>
    <string name="instructions_title">Instructions</string>
    <string name="list_title">Your Inventory</string>
    <string name="detail_title">Add to Inventory</string>

    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="fruit_name">Fruit name</string>
    <string name="quantity_kgs">Quantity in kg</string>
    <string name="company">Company</string>
    <string name="description">Description</string>

    <string name="list_item_quantity_kg">%1$s kg</string>

    <string name="peach">Peach</string>
    <string name="pear">Pear</string>
    <string name="strawberry">Strawberry</string>

    <string name="enter_your_credentials">Please enter your credentials below</string>

    <string name="what_is_fruit_store_inventory">What is Fruit Store Inventory?</string>
    <string name="what_is_fruit_store_inventory_details">
        We provide a list of available fruits at the fruit store. In our inventory you will find
        pears, peaches, strawberries and a wonderful selection of the best fruits from around the
        world.
    </string>

    <!-- Instructions screen -->
    <string name="instructions_list">
        In order to add a new item to your inventory please follow these steps.
    </string>
    <string name="instructions_step_1">
        (1) Click on the button as show in the picture below.
    </string>
    <string name="instructions_step_2">
        (2) Provide the information for the new item in the inventory and click Save
    </string>

    <!-- Content Descriptions -->
    <string name="img_fruit_plate">Fruit plate</string>
    <string name="img_fruit_store">Fruit store</string>
    <string name="edit_text_email">Enter email</string>
    <string name="edit_text_password">Enter password</string>
    <string name="edit_text_fruit_name">Enter fruit name</string>
    <string name="edit_text_company">Enter company name</string>
    <string name="edit_text_quantity">Enter quantity in kg</string>
    <string name="edit_text_description">Enter description</string>
    <string name="floating_button_add_fruit">Add fruit</string>
    <string name="img_instructions_list">Inventory image instructions</string>
    <string name="img_instructions_add">Add fruit image instructions</string>

    <!-- dummy -->
    <string name="dummy_fruit_name">Dummy fruit name</string>
    <string name="dummy_quantity_kgs">999kg</string>
    <string name="dummy_company">Dummy Company INC</string>
    <string name="dummy_description">Dummy description</string>

</resources>