<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionFragment">

    <data>

        <variable
            name="instructionViewModel"
            type="com.example.storeinventory.screens.instruction.InstructionViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/quarter_margin" >

        <LinearLayout
            android:id="@+id/linear_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal" >

            <TextView
                style="@style/TextBold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/instructions_list" />

            <ImageView
                android:id="@+id/imageView_list_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"
                android:contentDescription="@string/img_fruit_store"
                android:background="@drawable/solid_2_border"
                android:padding="8dp"
                app:srcCompat="@drawable/list_screen" />

            <Button
                android:id="@+id/button_nex_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:onClick="@{() -> instructionViewModel.onNext()}"
                android:text="@string/next" />

        </LinearLayout>




    </ScrollView>

</layout>